[tool.poetry]
name = "aoc2021-day1"
version = "0.1.0"
description = ""
authors = ["Hayden Seitz <hseitz@getunwired.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
