[tool.poetry]
name = "aoc2021-day1"
version = "0.1.0"
description = ""
authors = ["Hayden Seitz <hseitz@getunwired.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
